<resources>
    <string name="app_name">NeWork</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="wrongSignInData">Wrong sign in data</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="add_avatar">Add avatar</string>
    <string name="wrong_pass_confirm">Wrong password confirmation</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="error">Error</string>
    <string name="datetime_is_empty">You should choose the date and type of event</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_user_exist">User already registered</string>
    <string name="ok">OK</string>
    <string name="requestSignInTitle">You are not signed in yet</string>
    <string name="requestSignInMessage">You should sign in to have much</string>
    <string name="return_to_posts">Return to posts</string>
    <string name="error_like">Something goes wrong. Your like has not been registered. Try again later</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login_can_not_be_empty">Login can\'t be empty</string>
    <string name="company_name_can_not_be_empty">Company name can\'t be empty</string>
    <string name="pass_can_not_be_empty">Password can\'t be empty</string>
    <string name="position_can_not_be_empty">Position can\'t be empty</string>
    <string name="name_can_not_be_empty">Name can\'t be empty</string>
    <string name="pass_confirm_can_not_be_empty">Password confirm can\'t be empty</string>
    <string name="choose_source">Choose source</string>
    <string name="choose_source_message">Would you like to make selfie or attach image</string>
    <string name="choose_source_message_attachment">Would you like to make photo or attach image</string>
    <string name="selfie">Selfie</string>
    <string name="photo">Photo</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="attachment_too_large">Attachment have to be less than 15 Mb</string>
    <string name="error_delete">Something goes wrong. Deleting was cancelled. Try again later</string>
    <string name="content">Content:</string>
    <string name="link">Link:</string>
    <string name="job">Job</string>
    <string name="looking_for_best_company">Looking for best company</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="type">Type</string>
    <string name="date_and_time">date and time</string>
    <string name="dd_mm_yyyy_hh_mm">dd.mm.yyyy HH:mm</string>
    <string name="check_users">check users</string>
    <string name="wall">Wall</string>
    <string name="my_wall">My Wall</string>
    <string name="create">Create</string>
    <string name="position">Position</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter dates</string>
    <string name="select_event_date">Select Event date</string>
    <string name="select_event_time">Select Event time</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_finish_date">Select finish date</string>
    <string name="error_new_job_start">You should choose the date of start working</string>


</resources>