<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewEventFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/newEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content" />

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing"
                android:visibility="visible"
                tools:ignore="Autofill,LabelFor"
                tools:text="@tools:sample/lorem[20]" />

            <TextView
                android:layout_marginTop="@dimen/small_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link" />

            <EditText
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="@drawable/border"
                android:textColorLink="@color/colorPrimary"
                android:visibility="visible"
                tools:ignore="Autofill,LabelFor,TextFields"
                tools:text="www.google.com" />

            <FrameLayout
                android:id="@+id/videoContainer"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginBottom="@dimen/common_spacing"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/attachDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header">


                <VideoView
                    android:id="@+id/attachmentVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:importantForAccessibility="no"
                    android:visibility="visible"
                    tools:srcCompat="@drawable/image_default" />

                <ImageButton
                    android:id="@+id/playVideoButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    app:srcCompat="@drawable/play_video_icon"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removeVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/menu_remove"
                    android:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/audioContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/playAudioButton"
                    android:layout_width="@dimen/icon_button_min_size"
                    android:layout_height="@dimen/icon_button_min_size"
                    android:layout_marginStart="64dp"
                    android:background="@drawable/play_icon_selector"
                    android:checkable="true"
                    android:gravity="center_horizontal" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removeAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/menu_remove"
                    android:visibility="visible" />


            </FrameLayout>


            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:visibility="visible"
                    tools:ignore="ContentDescription"
                    tools:src="@tools:sample/avatars[15]" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/menu_remove"
                    android:visibility="visible" />
            </FrameLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_camera_24dp"
            app:iconTint="?colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takeFile"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/takePhoto"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/attach_file"
            app:iconTint="?colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMentioned"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/takeFile"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/people_outline"
            app:iconTint="?colorOnPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/common_spacing"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_add_24dp"
            tools:ignore="ContentDescription,RelativeOverlap" />


    </RelativeLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/visibilityGroupOfTypeAndDateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="typeTitle,typeOfEvent, dateInput, datePicker" />


    <EditText
        android:id="@+id/dateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:hint="@string/mm_dd_yyyy_hh_mm"
        android:clickable="false"
        android:paddingBottom="@dimen/small_spacing"
        android:paddingTop="@dimen/small_spacing"
        android:paddingStart="@dimen/common_spacing"
        android:paddingEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:inputType="datetime"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@id/typeTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />


    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="@dimen/icon_button_min_size"
        android:layout_height="@dimen/icon_button_min_size"
        android:background="@drawable/calendar"
        android:importantForAccessibility="no"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dateInput"
        app:layout_constraintBottom_toBottomOf="@id/dateInput" />


    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/typeOfEvent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Type" />

    <RadioGroup
        android:id="@+id/typeOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:checkedButton="@+id/radio_button_group"
        android:paddingStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <RadioButton
            android:id="@+id/online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/offline" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>